<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".distracker">

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_0_0_meters"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_0s"
        android:textSize="24sp"
        android:layout_below="@id/distance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:textSize="24sp"
        android:layout_below="@id/time"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:textSize="24sp"
        android:layout_below="@id/start"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:enabled="false"/>
</RelativeLayout>
