<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:id="@+id/img_logo"
        android:layout_marginTop="75dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMAIL"
        android:textSize="22sp"
        android:padding="10dp"
        android:id="@+id/edt_email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="22sp"
        android:padding="10dp"
        android:id="@+id/edt_password"
        android:layout_marginTop="24dp"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        >
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="26sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="start"
            android:id="@+id/bt_login"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="26sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="end"
            android:id="@+id/bt_signup"
            />
    </GridLayout>

</LinearLayout>